--- a/css/employee.css
+++ b/css/employee.css
@@ -258,6 +258,9 @@ body {
   max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 40px;
+  padding-bottom: 40px;
+  padding-right: 40px;
 }
 
 .staff-card {
@@ -265,7 +268,6 @@ body {
   border-radius: 20px;
   padding: 35px;
   text-align: center;
-  box-shadow: 0 15px 35px rgba(0.3, 0.5, 0.5, 0.5);
   border: 1px solid rgba(0, 0, 0, 0.05);
   transition: all 0.4s ease;
   position: relative;
@@ -767,6 +769,7 @@ body {
     font-size: 0.85rem;
     margin-top: 15px;
   }
+
   .footer {
     padding: 30px 0 15px;
   }
