--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -107,7 +107,9 @@ body {
   background: rgba(255, 255, 255, 0.2);
   transform: translateY(-2px);
 }
-
+.nav-active {
+  background: rgba(255, 255, 255, 0.2);
+}
 .menu-toggle {
   display: none;
   flex-direction: column;
