--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -135,6 +135,9 @@ body {
   min-height: calc(100vh - 120px);
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hero-section {
