--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  font-family: "Arial", sans-serif;
   min-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
