--- a/css/products.css
+++ b/css/products.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "poppins", sans-serif;
   min-height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
