--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -155,7 +155,7 @@ h1 {
   color: #016aad;
   font-size: 3rem;
   margin-bottom: 20px;
-  background: linear-gradient(45deg, #667eea, #764ba2);
+  background: #000000;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
