--- a/css/employee.css
+++ b/css/employee.css
@@ -4,11 +4,13 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 html,
 body {
   margin: 0;
   padding: 0;
 }
+
 body {
   background: #f8f9fa;
   min-height: 100%;
@@ -152,21 +154,31 @@ body {
   margin-bottom: 50px;
 }
 
-.page-header h2 {
-  font-size: 3.5rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  text-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-  color: #000;
+.page-header h1 {
+  font-size: 3rem;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 5px;
+}
+
+.page-header h1::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 3px;
+  background-color: #e74c3c;
 }
 
 .page-header p {
+  padding-top: 1rem;
   font-size: 1.2rem;
   margin-bottom: 2rem;
   opacity: 0.9;
   line-height: 1.6;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  color: rgba(0, 0, 0, 1);
+  color: #7f8c8d;
 }
 
 .search-container {
