--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -162,53 +162,48 @@ form {
   gap: 50px;
 }
 
-.form-group {
-  flex: 1;
-  position: relative;
+.form-group{
+    flex: 1;
+    position: relative;
 }
+input,textarea{
+    width: 100%;
+    padding: 14px 12px;
+    font-size: 15px;
+    border: 1px solid#ccc;
+    border-radius: 8px;
+    background-color: white;
+    /* outline: none; */
+    /* transition: all 0.3 s; */
 
-input,
-textarea {
-  width: 100%;
-  padding: 14px 12px;
-  font-size: 15px;
-  border: 1px solid#ccc;
-  border-radius: 8px;
-  background-color: white;
 }
+input:focus ,textarea:focus{
+    border-color: #4facfe;
+    box-shadow: 0 0 5px rgba(79, 172, 254, 0.4);
 
-input:focus,
-textarea:focus {
-  border-color: #4facfe;
-  box-shadow: 0 0 5px rgpa(79, 172, 254, 0.4);
 }
-
-label {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: #fff;
-  padding-left: 80px;
-  padding-bottom: 5px;
-  color: #888;
-  font-size: 14px;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-
-.message-box {
-  padding-left: 180px;
+label{
+    position: absolute;
+    left: 12px;
+    top: 40%;
+    transform: translateY(-50%);
+    background-color: #fff;
+    padding: 0 5px;
+    color: #888;
+    font-size: 14px;
+    transition: all 0.2s ease;
+    pointer-events: none;
 }
 input:focus + label,
 input:not(:placeholder-shown) + label,
 textarea:focus + label,
 textarea:not(:placeholder-shown) + label {
   top: -12px;
-  left: 0px;
-  font-size: 14px;
+  left: 2px;
+  font-size: 15px;
   color: black;
   background-color: transparent;
+  
 }
 
 .full textarea {
@@ -216,16 +211,6 @@ textarea:not(:placeholder-shown) + label {
   resize: none;
 }
 
-button {
-  padding: 14px;
-  font-size: 16px;
-  background: #31a599;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
 
 button:hover {
   transform: scale(1.03);
