--- a/css/master.css
+++ b/css/master.css
@@ -185,10 +185,13 @@ body {
 .company-intro,
 .product-snapshot,
 .order-management {
-  padding: 4rem 2rem;
+  padding: 3rem 3rem;
   background: rgba(255, 255, 255, 0.95);
   color: #333;
   text-align: center;
+}
+.intro-content h2{
+  padding-top: 20px;
 }
 
 .company-intro h2,
@@ -273,19 +276,19 @@ body {
 }
 
 .Choose-us {
-  padding: 60px 20px;
+  padding: 3rem 3rem;
   background-color: #f8f9fa;
   text-align: center;
 }
 .Choose-us h2 {
-  font-size: 2.5rem;
+  font-size: 32px;
   margin-bottom: 30px;
 }
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 50px;
-  margin: 0 auto;
+  gap: 30px;
+  margin: 3rem auto;
 }
 .feature-item {
   background-color: #fff;
