--- a/css/media.css
+++ b/css/media.css
@@ -177,6 +177,11 @@ body {
   background-color: red;
   border-radius: 2px;
 }
+.tittle p{
+  margin-top: -50px;
+  margin-bottom: 40px;
+  color: #555;
+}
 
 
 
