--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -181,8 +181,9 @@ h1 {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 30px;
   margin: 40px 0;
+  padding: 0 30px;
   background: rgba(255, 255, 255, 0.9);
-  padding: 30px;
+ 
   border-radius: 15px;
   backdrop-filter: blur(10px);
 }
@@ -827,6 +828,9 @@ h1 {
   .product-image {
     font-size: 0.95rem;
   }
+  .features-list{
+    padding: 10px;
+  }
 }
 
 @media (max-width: 320px) {
@@ -841,7 +845,7 @@ h1 {
     height: 160px;
   }
   .stat-card {
-    padding: 20px;
+    padding: 5px;
   }
   .stat-number {
     font-size: 2rem;
