--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -11,8 +11,6 @@ body {
   overflow-y: auto;
   background: rgba(255, 255, 255, 0.95);
   padding-top: 100px;
-  
-  
 }
 
 .video-container {
@@ -41,7 +39,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-   background: rgba(255, 255, 255, 0.95);
+  background: rgba(255, 255, 255, 0.95);
   z-index: -1;
 }
 
@@ -137,7 +135,6 @@ body {
   margin: 120px auto 50px;
   padding: 20px;
   text-align: center;
- 
 }
 
 .contact-box {
@@ -164,8 +161,9 @@ body {
   background-color: #e74c3c;
 }
 
-
 .contact-box p {
+  padding-top: 1rem;
+  font-size: 1.1rem;
   color: #555;
   margin-bottom: 30px;
 }
@@ -181,37 +179,37 @@ form {
   gap: 50px;
 }
 
-.form-group{
-    flex: 1;
-    position: relative;
+.form-group {
+  flex: 1;
+  position: relative;
 }
-input,textarea{
-    width: 100%;
-    padding: 14px 12px;
-    font-size: 15px;
-    border: 1px solid#ccc;
-    border-radius: 8px;
-    background-color: white;
-    /* outline: none; */
-    /* transition: all 0.3 s; */
-
+input,
+textarea {
+  width: 100%;
+  padding: 14px 12px;
+  font-size: 15px;
+  border: 1px solid#ccc;
+  border-radius: 8px;
+  background-color: white;
+  /* outline: none; */
+  /* transition: all 0.3 s; */
 }
-input:focus ,textarea:focus{
-    border-color: #4facfe;
-    box-shadow: 0 0 5px rgba(79, 172, 254, 0.4);
-
+input:focus,
+textarea:focus {
+  border-color: #4facfe;
+  box-shadow: 0 0 5px rgba(79, 172, 254, 0.4);
 }
-label{
-    position: absolute;
-    left: 12px;
-    top: 40%;
-    transform: translateY(-50%);
-    background-color: #fff;
-    padding: 0 5px;
-    color: #888;
-    font-size: 14px;
-    transition: all 0.2s ease;
-    pointer-events: none;
+label {
+  position: absolute;
+  left: 12px;
+  top: 40%;
+  transform: translateY(-50%);
+  background-color: #fff;
+  padding: 0 5px;
+  color: #888;
+  font-size: 14px;
+  transition: all 0.2s ease;
+  pointer-events: none;
 }
 input:focus + label,
 input:not(:placeholder-shown) + label,
@@ -222,7 +220,6 @@ textarea:not(:placeholder-shown) + label {
   font-size: 15px;
   color: black;
   background-color: transparent;
-  
 }
 
 .full textarea {
@@ -233,14 +230,13 @@ textarea:not(:placeholder-shown) + label {
 button {
   padding: 14px;
   font-size: 16px;
-  background-color: #1AA0A5;
+  background-color: #1aa0a5;
   border: none;
   border-radius: 8px;
   color: white;
   cursor: pointer;
   transition: transform 0.2s ease;
 }
-
 
 button:hover {
   transform: scale(1.03);
