--- a/css/media.css
+++ b/css/media.css
@@ -135,17 +135,15 @@ body {
 
 /* media */
 .media-section {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 0rem 1rem;
   /* background:white; */
-
 }
 
 .container {
   max-width: 1200px;
   margin: 2rem auto;
   margin-bottom: 50px;
- 
 }
 
 .section-title {
@@ -154,11 +152,9 @@ body {
   margin: 2rem 0;
   color: black;
   margin-bottom: 60px;
-  
-  
 }
-.tittle{
-    text-align: center;
+.tittle {
+  text-align: center;
 }
 
 #yuktha-title {
@@ -177,14 +173,12 @@ body {
   background-color: red;
   border-radius: 2px;
 }
-.tittle p{
+.tittle p {
+  padding-top: 1rem;
   margin-top: -50px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   color: #555;
 }
-
-
-
 
 /* Card Grid */
 .card-grid {
@@ -197,7 +191,7 @@ body {
 .card {
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
   overflow: hidden;
   transition: transform 0.3s;
 }
@@ -273,16 +267,14 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 2rem;
-  
 }
 
 .news-card {
   background: white;
   border-radius: 12px;
   overflow: hidden;
-  box-shadow: 0 5px 12px rgba(0,0,0,0.09);
+  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.09);
   transition: transform 0.5s ease;
-  
 }
 
 .news-card:hover {
@@ -303,11 +295,9 @@ body {
 
 .news-card p {
   margin: 0 1rem 1rem;
-  color:black;
+  color: black;
   font-size: 0.95rem;
-  
 }
-
 
 /* Footer */
 .footer {
@@ -467,7 +457,6 @@ body {
 .fade-in {
   animation: fadeInUp 0.6s ease forwards;
 }
-
 
 /* resposiveness for navbar */
 @media (max-width: 600px) {
