--- a/css/employee.css
+++ b/css/employee.css
@@ -596,6 +596,18 @@ body {
 }
 
 @media (max-width: 1024px) {
+  .navigation {
+    gap: 0.3rem;
+  }
+
+  .nav-link {
+    padding: 0.4rem 0.6rem;
+    font-size: 0.85rem;
+  }
+
+  .logo-img {
+    height: 60px;
+  }
   .search-container {
     max-width: 90%;
   }
