--- a/css/employee.css
+++ b/css/employee.css
@@ -889,3 +889,10 @@ body {
     font-size: 0.85rem;
   }
 }
+@media (max-width:900px){
+  .nav-link{
+   font-size: 1.2rem;
+   display: flex;
+    padding: 1rem 2rem;
+  }
+}
